Fix draft badge align and styles

--- a/src/Home/Records/components/OnlineStatus/styles.scss
+++ b/src/Home/Records/components/OnlineStatus/styles.scss
@@ -1,13 +1,14 @@
 .survey-status {
+  max-width: 80px;
+  margin: 0;
+
+  ion-label {
+    display: block !important;
+  }
+
   ion-badge {
     text-transform: uppercase;
   }
-}
-
-ion-button.survey-status-upload {
-  margin-right: 10px;
-  --padding-end: 15px;
-  --padding-start: 15px;
 }
 
 ion-spinner.survey-status {
