--- a/src/Home/Records/components/styles.scss
+++ b/src/Home/Records/components/styles.scss
@@ -16,7 +16,7 @@
     }
 
     ion-label {
-      display: flex !important;
+      display: flex;
       flex-direction: column;
       justify-content: center;
     }
